--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-native-dotenv": "^3.4.9",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-pell-rich-editor": "^1.9.0",
     "react-native-reanimated": "~3.3.0",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.2",
