--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-snackbar": "^2.6.2",
     "react-native-vector-icons": "^10.0.2",
     "uuid": "^9.0.1"
   },
