--- a/package.json
+++ b/package.json
@@ -9,26 +9,33 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "~49.0.15",
     "expo-image-picker": "~14.3.2",
+    "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.1",
+    "libphonenumber-js": "^1.10.53",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-calendars": "^1.1303.0",
     "react-native-dotenv": "^3.4.9",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-pell-rich-editor": "^1.9.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-snackbar": "^2.6.2",
     "react-native-vector-icons": "^10.0.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "expo-linking": "~5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
